Fixed c2a on mobile

--- a/src/book-now/book-now.scss
+++ b/src/book-now/book-now.scss
@@ -23,6 +23,7 @@
         letter-spacing: .1em;
         color: #3D3D3D;
         line-height: 1.5em;
+        padding: .2em 1em
       }
 
       .book-now__contact__information-form__section {
